Moved to DATABASE_URL environment variable configuration.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -298,10 +298,11 @@ play.filters {
 #
 # libraryDependencies += evolutions
 #
-#play.evolutions {
+play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
-  #db.default.enabled = false
-#}
+  db.default.enabled = true
+  enabled = true
+}
 
 ## Slick database configuration
 
@@ -312,9 +313,8 @@ slick {
 
       db {
         driver = "org.postgresql.Driver"
-        url = "${LSD_INTRO_DB_URL}"
-        user = "${LSD_INTRO_DB_USER}"
-        password = "${LSD_INTRO_DB_PASS}"
+        dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+        connectionTestQuery = "SELECT 1"
       }
     }
   }
