--- a/conf/application.conf
+++ b/conf/application.conf
@@ -317,5 +317,14 @@ slick {
         connectionTestQuery = "SELECT 1"
       }
     }
+
+    test {
+      driver = "slick.driver.H2Driver$"
+
+      db {
+        driver = "org.h2.Driver"
+        url = "jdbc:h2:mem:play"
+      }
+    }
   }
 }
