Started work on DB cleaning before tests are run.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -319,11 +319,12 @@ slick {
     }
 
     test {
-      driver = "slick.driver.H2Driver$"
+      driver = "slick.driver.PostgresDriver$"
 
       db {
-        driver = "org.h2.Driver"
-        url = "jdbc:h2:mem:play"
+        driver = "org.postgresql.Driver"
+        dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+        connectionTestQuery = "SELECT 1"
       }
     }
   }
