Fixed tsconfig for atom-typescript.

--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -15,9 +15,20 @@
     "target": "es5",
     "inlineSources": true
   },
-
   "files": [
+    "app/app.component.spec.ts",
+    "app/app.component.ts",
+    "app/app.routes.ts",
+    "app/environment.ts",
+    "app/index.ts",
+    "app/shared/index.ts",
+    "app/signup/signup.component.ts",
+    "app/utils/nav.component.ts",
     "main.ts",
+    "system-config.ts",
     "typings.d.ts"
-  ]
+  ],
+  "atom": {
+    "rewriteTsconfig": true
+  }
 }
