Added proper setting of the app's title.

--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -26,6 +26,7 @@
     "app/index.ts",
     "app/shared/index.ts",
     "app/signup/signup-alt.component.ts",
+    "app/signup/signup.component.spec.ts",
     "app/signup/signup.component.ts",
     "app/signup/signup.service.spec.ts",
     "app/signup/signup.service.ts",
