--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -22,6 +22,9 @@
     "app/app.component.spec.ts",
     "app/app.component.ts",
     "app/app.routes.ts",
+    "app/courses/course-calendar.component.spec.ts",
+    "app/courses/course-calendar.component.ts",
+    "app/courses/index.ts",
     "app/environment.ts",
     "app/index.ts",
     "app/shared/index.ts",
