Restructured slightly to move courses under admin. Added separate route definitions for both admin and sign-up.

--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -19,18 +19,24 @@
     "**/*.ts"
   ],
   "files": [
+    "app/admin/admin-base.component.spec.ts",
+    "app/admin/admin-base.component.ts",
+    "app/admin/admin.routes.ts",
+    "app/admin/courses/course-calendar.component.spec.ts",
+    "app/admin/courses/course-calendar.component.ts",
+    "app/admin/courses/index.ts",
+    "app/admin/index.ts",
     "app/app.component.spec.ts",
     "app/app.component.ts",
     "app/app.routes.ts",
-    "app/courses/course-calendar.component.spec.ts",
-    "app/courses/course-calendar.component.ts",
-    "app/courses/index.ts",
     "app/environment.ts",
     "app/index.ts",
-    "app/shared/index.ts",
     "app/signup/signup-alt.component.ts",
+    "app/signup/signup-base.component.spec.ts",
+    "app/signup/signup-base.component.ts",
     "app/signup/signup.component.spec.ts",
     "app/signup/signup.component.ts",
+    "app/signup/signup.routes.ts",
     "app/signup/signup.service.spec.ts",
     "app/signup/signup.service.ts",
     "app/utils/nav.component.ts",
