--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -45,6 +45,7 @@
     "app/signup/signup.routes.ts",
     "app/signup/signup.service.spec.ts",
     "app/signup/signup.service.ts",
+    "app/utils/moment-matchers.ts",
     "app/utils/nav.component.ts",
     "main.ts",
     "system-config.ts",
