Split out the tile part of the calendar into a separate component.

--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -29,6 +29,8 @@
     "app/admin/courses/index.ts",
     "app/admin/courses/month.service.spec.ts",
     "app/admin/courses/month.service.ts",
+    "app/admin/courses/tile.component.spec.ts",
+    "app/admin/courses/tile.component.ts",
     "app/admin/courses/tile.service.spec.ts",
     "app/admin/courses/tile.service.ts",
     "app/admin/index.ts",
