--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,13 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
     "es6-shim": "0.35.1",
+    "google-libphonenumber": "^1.0.25",
+    "moment": "^2.13.0",
+    "node-sass": "^3.8.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
-    "zone.js": "0.6.12",
-
-    "moment": "^2.13.0",
-    "node-sass": "^3.8.0"
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
     "angular-cli": "1.0.0-beta.10",
