--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -41,7 +41,6 @@
     "app/index.ts",
     "app/signup/signup-alt.component.spec.ts",
     "app/signup/signup-alt.component.ts",
-    "app/signup/signup-alt.model.ts",
     "app/signup/signup-base.component.spec.ts",
     "app/signup/signup-base.component.ts",
     "app/signup/signup.component.spec.ts",
@@ -49,9 +48,11 @@
     "app/signup/signup.routes.ts",
     "app/signup/signup.service.spec.ts",
     "app/signup/signup.service.ts",
+    "app/utils/custom-validators.spec.ts",
+    "app/utils/custom-validators.ts",
+    "app/utils/index.ts",
     "app/utils/moment-matcher.ts",
     "app/utils/nav.component.ts",
-    "app/utils/validation-error.ts",
     "main.ts",
     "system-config.ts",
     "typings.d.ts"
