Added the thank-you page.

--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -39,6 +39,8 @@
     "app/app.routes.ts",
     "app/environment.ts",
     "app/index.ts",
+    "app/rxjs-operators.ts",
+    "app/signup/index.ts",
     "app/signup/signup-alt.component.spec.ts",
     "app/signup/signup-alt.component.ts",
     "app/signup/signup-base.component.spec.ts",
@@ -47,7 +49,11 @@
     "app/signup/signup.component.ts",
     "app/signup/signup.routes.ts",
     "app/signup/signup.service.spec.ts",
+    "app/signup/signup.service.stub.ts",
     "app/signup/signup.service.ts",
+    "app/signup/thank-you/index.ts",
+    "app/signup/thank-you/thank-you.component.spec.ts",
+    "app/signup/thank-you/thank-you.component.ts",
     "app/utils/custom-validators.spec.ts",
     "app/utils/custom-validators.ts",
     "app/utils/index.ts",
