Added Slick tables back in.

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -8,7 +8,7 @@ http {
 }
 
 database = {
-  url = ${DB_URL}
-  username = ${DB_USERNAME}
-  password = ${DB_PASSWORD}
+  url = ${LSD_DB_URL}
+  username = ${LSD_DB_USERNAME}
+  password = ${LSD_DB_PASSWORD}
 }
