Added course view.

--- a/frontend/src/tsconfig.json
+++ b/frontend/src/tsconfig.json
@@ -24,6 +24,9 @@
     "app/admin/admin.routes.ts",
     "app/admin/courses/course-calendar.component.spec.ts",
     "app/admin/courses/course-calendar.component.ts",
+    "app/admin/courses/course-view/course-view.component.spec.ts",
+    "app/admin/courses/course-view/course-view.component.ts",
+    "app/admin/courses/course-view/index.ts",
     "app/admin/courses/course.service.spec.ts",
     "app/admin/courses/course.service.ts",
     "app/admin/courses/index.ts",
