--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,23 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
+    "@angular/common": "^2.0.0-rc.5",
+    "@angular/compiler": "^2.0.0-rc.5",
+    "@angular/core": "^2.0.0-rc.5",
+    "@angular/forms": "0.3.0",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "^2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.5",
     "@types/google-libphonenumber": "^7.4.1",
     "core-js": "^2.4.0",
     "google-libphonenumber": "^1.0.25",
     "moment": "^2.13.0",
     "node-sass": "^3.8.0",
-    "reflect-metadata": "0.1.3",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "ts-helpers": "^1.1.1",
-    "zone.js": "0.6.12"
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
