--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "@angular/http": "2.0.0-rc.5",
     "@angular/platform-browser": "^2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
+    "@angular/router": "^3.0.0-rc.1",
     "@angular/upgrade": "2.0.0-rc.5",
     "@types/google-libphonenumber": "^7.4.1",
     "core-js": "^2.4.0",
