--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,28 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "^2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
+    "@angular/common": "2.0.0-rc.7",
+    "@angular/compiler": "2.0.0-rc.7",
+    "@angular/core": "2.0.0-rc.7",
+    "@angular/forms": "2.0.0-rc.7",
+    "@angular/http": "2.0.0-rc.7",
+    "@angular/platform-browser": "^2.0.0-rc.7",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.7",
+    "@angular/router": "3.0.0-rc.3",
     "@types/google-libphonenumber": "^7.4.1",
     "core-js": "^2.4.1",
     "google-libphonenumber": "^1.0.25",
     "moment": "^2.13.0",
     "node-sass": "^3.8.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.11",
+    "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.17"
+    "zone.js": "^0.6.21"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "@types/protractor": "^1.5.16",
-    "angular-cli": "1.0.0-beta.11-webpack.8",
+    "angular-cli": "1.0.0-beta.11-webpack.9-2",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
