Added basic text message receive auth.

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -13,3 +13,5 @@ database = {
   username = ${LSD_DB_USERNAME}
   password = ${LSD_DB_PASSWORD}
 }
+
+text_message_receive_api_key = ${LSD_TEXT_MESSAGE_API_KEY}
