Added a very rough but functional text sender.

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -15,3 +15,9 @@ database = {
 }
 
 text_message_receive_api_key = ${LSD_TEXT_MESSAGE_API_KEY}
+
+twilio = {
+  account_sid = ${LSD_TWILIO_ACCOUNT_SID}
+  auth_token = ${LSD_TWILIO_AUTH_TOKEN}
+  messaging_service_sid = ${LSD_TWILIO_MESSAGING_SERVICE_SID}
+}
