Added npm scripts for building.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
+    "build": "ng build",
+    "build-prod": "ng build --prod",
     "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
