--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,15 +20,16 @@
     "@angular/platform-browser": ">=4.0.0-beta <5.0.0",
     "@angular/platform-browser-dynamic": ">=4.0.0-beta <5.0.0",
     "@angular/router": ">=4.0.0-beta <5.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6",
     "@types/google-libphonenumber": "^7.4.1",
+    "core-js": "^2.4.1",
     "google-libphonenumber": "^1.0.25",
+    "karma-phantomjs-launcher": "^1.0.4",
     "moment": "^2.13.0",
     "node-sass": "^3.8.0",
     "reflect-metadata": "^0.1.3",
-    "ts-helpers": "^1.1.1"
+    "rxjs": "^5.1.0",
+    "ts-helpers": "^1.1.1",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.2",
@@ -41,9 +42,9 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
