--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": ">=4.0.0-beta <5.0.0",
     "@angular/router": ">=4.0.0-beta <5.0.0",
     "@types/google-libphonenumber": "^7.4.1",
+    "angulartics2": "^1.6.4",
     "core-js": "^2.4.1",
     "google-libphonenumber": "^1.0.25",
     "karma-phantomjs-launcher": "^1.0.4",
