--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,20 +6,21 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": ">=4.0.0-beta <5.0.0",
-    "@angular/compiler": ">=4.0.0-beta <5.0.0",
-    "@angular/core": ">=4.0.0-beta <5.0.0",
-    "@angular/forms": ">=4.0.0-beta <5.0.0",
-    "@angular/http": ">=4.0.0-beta <5.0.0",
-    "@angular/platform-browser": ">=4.0.0-beta <5.0.0",
-    "@angular/platform-browser-dynamic": ">=4.0.0-beta <5.0.0",
-    "@angular/router": ">=4.0.0-beta <5.0.0",
+    "@angular/common": "4.0.1",
+    "@angular/compiler": "4.0.1",
+    "@angular/core": "4.0.1",
+    "@angular/forms": "4.0.1",
+    "@angular/http": "4.0.1",
+    "@angular/platform-browser": "4.0.1",
+    "@angular/platform-browser-dynamic": "4.0.1",
+    "@angular/router": "4.0.1",
     "@types/google-libphonenumber": "^7.4.1",
     "angulartics2": "^1.6.4",
     "core-js": "^2.4.1",
@@ -30,12 +31,12 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": ">=4.0.0-beta <5.0.0",
-    "@types/jasmine": "2.5.38",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "4.0.1",
+    "@types/jasmine": "2.5.47",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
