--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "moment": "^2.13.0",
     "node-sass": "^3.8.0",
+    "raven-js": "^3.14.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.1.0",
     "ts-helpers": "^1.1.1",
