Added JWT validation service & directive. Started work on FB login.

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -22,3 +22,11 @@ twilio = {
   auth_token = ${LSD_TWILIO_AUTH_TOKEN}
   messaging_service_sid = ${LSD_TWILIO_MESSAGING_SERVICE_SID}
 }
+
+fb = {
+  secret = ${FB_SECRET}
+}
+
+jwt = {
+  secret = ${JWT_SECRET}
+}
