--- a/frontend/deploy/Jenkinsfile
+++ b/frontend/deploy/Jenkinsfile
@@ -26,7 +26,7 @@ node {
     }
 
     stage('Build') {
-      sh 'yarn build -- --' + deployEnv()
+      sh 'yarn run build-' + deployEnv()
       sh 'rm -rv dist/assets/css'
     }
 
@@ -42,7 +42,7 @@ node {
         sh '''echo "{
             \\"Paths\\": {
               \\"Quantity\\": 1,
-              \\"Items\\": [\\"/*\\"]
+              \\"Items\\": [\\"/index.html\\"]
             },
             \\"CallerReference\\": \\"invalidate-index-$(date "+%Y-%m-%d_%H_%M_%S")\\"
           }" > invalidate-batch.json'''
