--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve --host local-dev.leedsskydivers.com",
     "build": "ng build",
-    "build-prod": "ng build --prod",
+    "build-dev": "ng build --environment=dev --stats --progress=false --aot --output-hashing=all",
+    "build-prod": "ng build --environment=prod --stats --progress=false --aot --output-hashing=all",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "node $NODE_DEBUG_OPTION node_modules/@angular/cli/bin/ng e2e"
