--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host local-dev.leedsskydivers.com",
-    "build": "ng build",
+    "start": "ng serve --environment=local --host local-dev.leedsskydivers.com",
+    "build": "ng build --environment=local",
     "build-dev": "ng build --environment=dev --stats --progress=false --aot --output-hashing=all",
     "build-prod": "ng build --environment=prod --stats --progress=false --aot --output-hashing=all",
     "test": "ng test",
