--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -14,6 +14,7 @@ pipeline {
         LSD_TWILIO_AUTH_TOKEN = '123'
         LSD_DB_USERNAME = 'luskydive_test'
         LSD_PORT = 8080
+        FB_APP_ID = 'fasdajsdjasd'
         FB_SECRET = 'blahblahblah'
         JWT_SECRET = 'nobody-does-it-better'
     }
