--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.1",
+    "@angular/cli": "^1.0.4",
     "@angular/compiler-cli": "4.1.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
