--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ install:
   - cd frontend
   - yarn install
 build:
-  - yarn run test
+  - yarn run test -- --progress=false
   - yarn run build-prod
