Removed creation of separate vendor chunk.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "ng": "ng",
     "start": "ng serve --environment=local --host local-dev.leedsskydivers.com",
     "build": "ng build --environment=local",
-    "build-dev": "ng build --environment=dev --stats --progress=false --aot --output-hashing=all",
-    "build-prod": "ng build --environment=prod --stats --progress=false --aot --output-hashing=all",
+    "build-dev": "ng build --environment=dev --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
+    "build-prod": "ng build --environment=prod --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "node $NODE_DEBUG_OPTION node_modules/@angular/cli/bin/ng e2e",
