Removed progress indicator on CI.

--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -12,7 +12,7 @@ node {
       }
 
       stage('Test') {
-        sh 'yarn run test -- --browsers PhantomJS --watch false'
+        sh 'yarn run test -- --browsers PhantomJS --watch false --progress false'
       }
     }
   }
