--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve --environment=local --host local-dev.leedsskydivers.com",
     "build": "ng build --environment=local",
     "build-dev": "ng build --environment=dev --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
-    "build-prod": "ng build --environment=prod --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
+    "build-prod": "ng build --prod --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "node $NODE_DEBUG_OPTION node_modules/@angular/cli/bin/ng e2e",
