--- a/frontend/Jenkinsfile
+++ b/frontend/Jenkinsfile
@@ -11,6 +11,10 @@ node {
         sh 'yarn install'
       }
 
+      stage('Lint') {
+        sh 'yarn run lint'
+      }
+
       stage('Test') {
         sh 'yarn run test -- --browsers PhantomJS --watch false --progress false'
       }
