Re-worked members base service and added specs.
Now sends the JWT if present, resets it if a 401 is returned and also
sends the client's app version.

--- a/frontend/deploy/Jenkinsfile
+++ b/frontend/deploy/Jenkinsfile
@@ -26,6 +26,9 @@ node {
     }
 
     stage('Build') {
+      def version = sh returnStdout: true, script: 'git rev-list -1 HEAD'
+
+      sh "sed -i '.bkp' 's/placeholder-version-123/${version}/g' src/app/app.module.ts"
       sh 'yarn run build-' + deployEnv()
       sh 'rm -rv dist/assets/css'
     }
