--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "@angular/cli": "1.2.0",
     "@angular/compiler-cli": "4.2.4",
     "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "2.5.45",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
