Added randomised sign-up info. Fixed lack of colours in e2e job.

--- a/frontend/e2e/Jenkinsfile
+++ b/frontend/e2e/Jenkinsfile
@@ -11,7 +11,9 @@ node {
     }
 
     stage('e2e') {
-      sh 'yarn run e2e-ci'
+      ansiColor('css') {
+        sh 'yarn run e2e-ci'
+      }
     }
   }
 
