--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -44,7 +44,8 @@ pipeline {
             steps {
                 ansiColor('css') {
                     dir('backend') {
-                        sh 'sbt test'
+                        sh 'sbt clean test coverageReport'
+                        sh 'tar -czf target/scoverage-report-$BUILD_NUMBER.tar.gz -C target/scala-2.11/scoverage-report .'
                     }
                 }
             }
@@ -66,7 +67,8 @@ pipeline {
                     dir('backend') {
                         sh 'sed --in-place "s/---VERSION---/$(git rev-parse HEAD)/" src/main/scala/com/jsherz/luskydive/util/BuildConfig.scala'
                         sh 'sbt assembly'
-                        archiveArtifacts 'target/scala-2.11/luskydive-assembly-0.0.0.1.jar'
+                        archiveArtifacts 'target/scala-2.11/luskydive-assembly-0.0.0.1.jar',
+                                         'target/scoverage-report-$BUILD_NUMBER.tar.gz'
                     }
                 }
             }
