--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -67,7 +67,7 @@ pipeline {
                     dir('backend') {
                         sh 'sed --in-place "s/---VERSION---/$(git rev-parse HEAD)/" src/main/scala/com/jsherz/luskydive/util/BuildConfig.scala'
                         sh 'sbt assembly'
-                        archiveArtifacts 'target/scala-2.11/luskydive-assembly-0.0.0.1.jar',
+                        archiveArtifacts 'target/scala-2.11/luskydive-assembly-0.0.0.1.jar, ' +
                                          'target/scoverage-report-$BUILD_NUMBER.tar.gz'
                     }
                 }
