--- a/frontend/e2e/Jenkinsfile
+++ b/frontend/e2e/Jenkinsfile
@@ -1,8 +1,26 @@
+#!/usr/bin/env groovy
+
 node {
 
   stage('Checkout') {
     git credentialsId: 'github-lsd-members',
         url: 'git@github.com:jSherz/lsd-members.git'
+  }
+
+  dir('backend') {
+    stage('Setup DB') {
+      withCredentials([
+        file(credentialsId: 'lsd-dev-deploy', variable: 'DEPLOY_KEY')
+      ]) {
+        sh 'chmod 0600 $DEPLOY_KEY'
+        sh 'export KEY=$(uuidgen)'
+         + ' && sed -i s/%%KEY%%/$KEY/g src/it/resources/setup-e2e-db.sql'
+         + ' && sed -i s/%%KEY%%/$KEY/g ../frontend/e2e/signup.po.ts'
+         + ' && sed -i s/%%KEY%%/$KEY/g ../frontend/e2e/signup-alt.po.ts'
+        sh 'scp -i $DEPLOY_KEY src/it/resources/setup-e2e-db.sql deploy@api.dev.leedsskydivers.com:/home/api'
+        sh 'ssh -i $DEPLOY_KEY deploy@api.dev.leedsskydivers.com \'sudo -H /usr/bin/python /opt/setup-e2e-db.py\''
+      }
+    }
   }
 
   dir('frontend') {
