--- a/frontend/e2e/Jenkinsfile
+++ b/frontend/e2e/Jenkinsfile
@@ -17,7 +17,7 @@ node {
            ' && sed -i s/%%KEY%%/$KEY/g src/it/resources/setup-e2e-db.sql' +
            ' && sed -i s/%%KEY%%/$KEY/g ../frontend/e2e/signup.po.ts' +
            ' && sed -i s/%%KEY%%/$KEY/g ../frontend/e2e/signup-alt.po.ts'
-        sh 'scp -i $DEPLOY_KEY src/it/resources/setup-e2e-db.sql deploy@api.dev.leedsskydivers.com:/home/api'
+        sh 'scp -i $DEPLOY_KEY src/it/resources/setup-e2e-db.sql deploy@api.dev.leedsskydivers.com:/home/api/scripts'
         sh 'ssh -i $DEPLOY_KEY deploy@api.dev.leedsskydivers.com \'sudo -H /usr/bin/python /opt/setup-e2e-db.py\''
       }
     }
