--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,9 +27,6 @@
     "angulartics2": "^1.6.4",
     "core-js": "^2.4.1",
     "google-libphonenumber": "^1.0.25",
-    "jsdom": "^11.0.0",
-    "karma-jsdom-launcher": "^6.1.2",
-    "karma-phantomjs-launcher": "^1.0.4",
     "moment": "^2.13.0",
     "node-sass": "^3.8.0",
     "raven-js": "^3.14.0",
@@ -47,8 +44,8 @@
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
