--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "ng build --environment=local",
     "build-dev": "ng build --environment=dev --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
     "build-prod": "ng build --prod --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
+    "coveralls": "cat coverage/coverage.lcov | coveralls",
     "test": "ng test",
+    "test-ci": "ng test --browsers ChromeHeadless --watch=false --progress=false --code-coverage=true",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "e2e-ci": "ng e2e --config protractor-ci.conf.js --serve=false",
@@ -44,6 +46,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
+    "coveralls": "^2.13.1",
     "jasmine-core": "~2.6.2",
     "jasmine-reporters": "^2.2.1",
     "jasmine-spec-reporter": "~4.1.0",
