Made the dev build more production like.
Should ensure any issues that will surface in production will be found
in E2E.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "ng": "ng",
     "start": "ng serve --environment=local --host local-dev.leedsskydivers.com",
     "build": "ng build --environment=local",
-    "build-dev": "ng build --environment=dev --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
-    "build-prod": "ng build --prod --stats --progress=false --aot --output-hashing=all --vendor-chunk=false",
+    "build-dev": "ng build --target=production --environment=dev --stats --progress=false --aot --output-hashing=all --vendor-chunk=false --sourcemaps=true",
+    "build-prod": "ng build --prod --stats --progress=false --aot --output-hashing=all --vendor-chunk=false --sourcemaps=true",
     "coveralls": "cat coverage/lcov.info | coveralls",
     "test": "ng test",
     "test-ci": "ng test --browsers ChromeHeadless --watch=false --progress=false --code-coverage=true",
