--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "jasmine-core": "~2.6.2",
     "jasmine-reporters": "^2.2.1",
     "jasmine-spec-reporter": "~4.1.0",
+    "jsonwebtoken": "^7.4.1",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
