--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,48 +19,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.2.4",
-    "@angular/compiler": "4.2.4",
-    "@angular/core": "4.2.4",
-    "@angular/forms": "4.2.4",
-    "@angular/http": "4.2.4",
-    "@angular/platform-browser": "4.2.4",
-    "@angular/platform-browser-dynamic": "4.2.4",
-    "@angular/router": "4.2.4",
-    "@types/google-libphonenumber": "^7.4.1",
-    "angulartics2": "^1.6.4",
-    "core-js": "^2.4.1",
-    "google-libphonenumber": "^1.0.25",
-    "moment": "^2.13.0",
-    "node-sass": "^3.8.0",
-    "raven-js": "^3.14.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "@angular/common": "5.2.9",
+    "@angular/compiler": "5.2.9",
+    "@angular/core": "5.2.9",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
+    "@angular/platform-browser": "5.2.9",
+    "@angular/platform-browser-dynamic": "5.2.9",
+    "@angular/router": "5.2.9",
+    "angulartics2": "^5.3.0",
+    "core-js": "^2.5.4",
+    "google-libphonenumber": "^3.1.2",
+    "moment": "^2.22.0",
+    "node-sass": "^4.8.3",
+    "raven-js": "^3.24.0",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^5.5.8",
+    "zone.js": "^0.8.25"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.0",
-    "@angular/compiler-cli": "4.2.4",
-    "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "2.5.45",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
-    "coveralls": "^2.13.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-reporters": "^2.2.1",
-    "jasmine-spec-reporter": "~4.1.0",
-    "jsonwebtoken": "^7.4.1",
-    "karma": "^1.7.0",
+    "@angular/cli": "1.7.3",
+    "@angular/compiler-cli": "5.2.9",
+    "@angular/language-service": "5.2.9",
+    "@types/google-libphonenumber": "^7.4.14",
+    "@types/jasmine": "^2.8.6",
+    "@types/jasminewd2": "^2.0.3",
+    "@types/node": "^9.6.2",
+    "codelyzer": "^4.2.1",
+    "coveralls": "^3.0.0",
+    "jasmine-core": "^3.1.0",
+    "jasmine-reporters": "^2.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "jsonwebtoken": "^8.2.0",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^1.0.0",
     "mock-webstorage": "^1.0.3",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "protractor": "^5.3.0",
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "2.6.2"
   }
 }
