--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -6,4 +6,4 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./pg-data:/var/lib/postgresql/data
+      - ./pg-data:/var/lib/postgresql/data:Z
