Upgraded to Angular 6.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --environment=local --host local-dev.leedsskydivers.com",
-    "build": "ng build --environment=local",
-    "build-dev": "ng build --target=production --environment=dev --stats --progress=false --aot --output-hashing=all --vendor-chunk=false --sourcemaps=true",
-    "build-prod": "ng build --prod --stats --progress=false --aot --output-hashing=all --vendor-chunk=false --sourcemaps=true --build-optimizer",
+    "start": "ng serve --host local-dev.leedsskydivers.com",
+    "build": "ng build",
+    "build-dev": "ng build --prod --configuration=dev --progress=false --aot --output-hashing=all --vendor-chunk=false",
+    "build-prod": "ng build --prod --configuration=production --progress=false --aot --output-hashing=all --vendor-chunk=false --build-optimizer",
     "coveralls": "cat coverage/lcov.info | coveralls",
     "test": "ng test",
     "test-ci": "ng test --browsers ChromeHeadlessNoSandbox --watch=false --progress=false --code-coverage=true --log-level=debug",
@@ -19,28 +19,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "5.2.9",
-    "@angular/compiler": "5.2.9",
-    "@angular/core": "5.2.9",
-    "@angular/forms": "5.2.9",
-    "@angular/http": "5.2.9",
-    "@angular/platform-browser": "5.2.9",
-    "@angular/platform-browser-dynamic": "5.2.9",
-    "@angular/router": "5.2.9",
-    "angulartics2": "^5.3.0",
+    "@angular/common": "6.1.9",
+    "@angular/compiler": "6.1.9",
+    "@angular/core": "6.1.9",
+    "@angular/forms": "6.1.9",
+    "@angular/http": "6.1.9",
+    "@angular/platform-browser": "6.1.9",
+    "@angular/platform-browser-dynamic": "6.1.9",
+    "@angular/router": "6.1.9",
+    "angulartics2": "^6.3.0",
     "core-js": "^2.5.4",
     "google-libphonenumber": "^3.1.2",
     "moment": "^2.22.0",
     "node-sass": "^4.8.3",
     "raven-js": "^3.24.0",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.8",
-    "zone.js": "^0.8.25"
+    "rxjs": "^6.3.3",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.3",
-    "@angular/compiler-cli": "5.2.9",
-    "@angular/language-service": "5.2.9",
+    "@angular-devkit/build-angular": "~0.8.0",
+    "@angular/cli": "6.2.4",
+    "@angular/compiler-cli": "6.1.9",
+    "@angular/language-service": "6.1.9",
     "@types/google-libphonenumber": "^7.4.14",
     "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "^2.0.3",
@@ -61,6 +62,6 @@
     "protractor": "^5.3.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
-    "typescript": "2.6.2"
+    "typescript": "2.9.2"
   }
 }
