--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "e2e": "ng e2e",
     "e2e-ci": "ng e2e --config protractor-ci.conf.js --serve=false",
     "update-webdriver": "webdriver-manager update",
-    "start-webdriver": "webdriver-manager start"
+    "start-webdriver": "webdriver-manager start",
+    "prettify": "prettier --write src/app/**/*.ts"
   },
   "private": true,
   "dependencies": {
@@ -59,9 +60,13 @@
     "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^1.0.0",
     "mock-webstorage": "^1.0.3",
+    "prettier": "^1.14.3",
     "protractor": "^5.3.0",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "typescript": "2.9.2"
+  },
+  "prettier": {
+    "tabWidth": 2
   }
 }
