--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,17 +18,21 @@
     "start-webdriver": "webdriver-manager start",
     "prettify": "prettier --write src/app/**/*.ts"
   },
+  "engines": {
+    "node": "^10.13",
+    "npm": "^6.4"
+  },
   "private": true,
   "dependencies": {
-    "@angular/common": "6.1.9",
-    "@angular/compiler": "6.1.9",
-    "@angular/core": "6.1.9",
-    "@angular/forms": "6.1.9",
-    "@angular/http": "6.1.9",
-    "@angular/platform-browser": "6.1.9",
-    "@angular/platform-browser-dynamic": "6.1.9",
-    "@angular/router": "6.1.9",
-    "angulartics2": "^6.3.0",
+    "@angular/common": "7.1.0",
+    "@angular/compiler": "7.1.0",
+    "@angular/core": "7.1.0",
+    "@angular/forms": "7.1.0",
+    "@angular/http": "7.1.0",
+    "@angular/platform-browser": "7.1.0",
+    "@angular/platform-browser-dynamic": "7.1.0",
+    "@angular/router": "7.1.0",
+    "angulartics2": "^7.2.0",
     "core-js": "^2.5.4",
     "google-libphonenumber": "^3.1.2",
     "moment": "^2.22.0",
@@ -36,35 +40,36 @@
     "raven-js": "^3.24.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "6.2.4",
-    "@angular/compiler-cli": "6.1.9",
-    "@angular/language-service": "6.1.9",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "7.1.0",
+    "@angular/compiler-cli": "7.1.0",
+    "@angular/language-service": "7.1.0",
     "@types/google-libphonenumber": "^7.4.14",
-    "@types/jasmine": "^2.8.6",
+    "@types/jasmine": "^3.3.0",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^9.6.2",
+    "@types/node": "^10.12.10",
     "codelyzer": "^4.2.1",
     "coveralls": "^3.0.0",
     "jasmine-core": "^3.1.0",
     "jasmine-reporters": "^2.3.0",
     "jasmine-spec-reporter": "^4.2.1",
     "jsonwebtoken": "^8.2.0",
-    "karma": "^2.0.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "^1.1.1",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.0.0",
     "mock-webstorage": "^1.0.3",
     "prettier": "^1.14.3",
     "protractor": "^5.3.0",
-    "ts-node": "^5.0.1",
+    "ts-node": "^7.0.1",
     "tslint": "^5.9.1",
-    "typescript": "2.9.2"
+    "typescript": "3.1.6"
   },
   "prettier": {
     "tabWidth": 2
