--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,15 @@ build-backend:
   image: jsherz/lsd-members-backend
   stage: build
   script:
+    - |
+      cat <<REPOS > ~/.sbt/repositories
+      [repositories]
+        local
+        my-ivy-proxy-releases: http://vms:8081/artifactory/sbt-release/, [organization]/[module]/(scala_[scalaVersion]/)(sbt_[sbtVersion]/)[revision]/[type]s/[artifact](-[classifier]).[ext]
+        my-maven-proxy-releases: http://vms:8081/artifactory/sbt-release/
+      REPOS
     - cd backend
-    - sbt clean compile test
+    - sbt -Dsbt.override.build.repos=true clean compile test
 
 build-frontend:
   image: jsherz/lsd-members-frontend
