--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,7 +70,7 @@
     "protractor": "^5.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.9.1",
-    "typescript": "3.1.6"
+    "typescript": "^3.1.6"
   },
   "prettier": {
     "tabWidth": 2,
