--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,19 +24,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "7.1.0",
-    "@angular/compiler": "7.1.0",
-    "@angular/core": "7.1.0",
-    "@angular/forms": "7.1.0",
-    "@angular/http": "7.1.0",
-    "@angular/platform-browser": "7.1.0",
-    "@angular/platform-browser-dynamic": "7.1.0",
-    "@angular/router": "7.1.0",
-    "angulartics2": "^7.2.3",
-    "core-js": "^2.5.4",
-    "google-libphonenumber": "^3.1.2",
-    "moment": "^2.22.0",
-    "node-sass": "^4.8.3",
+    "@angular/common": "7.1.4",
+    "@angular/compiler": "7.1.4",
+    "@angular/core": "7.1.4",
+    "@angular/forms": "7.1.4",
+    "@angular/http": "7.1.4",
+    "@angular/platform-browser": "7.1.4",
+    "@angular/platform-browser-dynamic": "7.1.4",
+    "@angular/router": "7.1.4",
+    "angulartics2": "^7.3.0",
+    "core-js": "^2.6.1",
+    "google-libphonenumber": "^3.2.2",
+    "moment": "^2.23.0",
+    "node-sass": "^4.11.0",
     "puppeteer": "^1.11.0",
     "raven-js": "^3.24.0",
     "reflect-metadata": "^0.1.12",
@@ -45,31 +45,31 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
-    "@angular/cli": "7.1.0",
-    "@angular/compiler-cli": "7.1.0",
-    "@angular/language-service": "7.1.0",
+    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular/cli": "^7.1.4",
+    "@angular/compiler-cli": "^7.1.4",
+    "@angular/language-service": "7.1.4",
     "@types/google-libphonenumber": "^7.4.14",
-    "@types/jasmine": "^3.3.0",
+    "@types/jasmine": "^3.3.5",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.12.10",
+    "@types/node": "^10.12.18",
     "codelyzer": "^4.2.1",
     "coveralls": "^3.0.0",
     "jasmine-core": "^3.1.0",
     "jasmine-reporters": "^2.3.0",
     "jasmine-spec-reporter": "^4.2.1",
     "jsonwebtoken": "^8.2.0",
-    "karma": "^3.1.1",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.0.0",
     "mock-webstorage": "^1.0.3",
-    "prettier": "^1.14.3",
-    "protractor": "^5.3.0",
+    "prettier": "^1.15.3",
+    "protractor": "^5.4.2",
     "ts-node": "^7.0.1",
-    "tslint": "^5.9.1",
+    "tslint": "^5.12.0",
     "typescript": "^3.1.6"
   },
   "prettier": {
